--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -550,5 +550,44 @@ patches = [
     # https://crrev.com/643a88a591e1fa448c9ee72679498e4288e7a164
     # https://bitbucket.org/chromiumembedded/cef/issues/3047
     'name': 'chrome_untrusted_webui_3047',
+  },
+  {
+    # Add loongarch64 support in src for cef build
+    'name': 'loongarch64_support_src_for_cef',
+  },
+  {
+    # Add loongarch64 support in third_party/angle for cef build
+    'name': 'loongarch64_support_angle_for_cef',
+    'path': 'third_party/angle/',
+  },
+  {
+    # Add loongarch64 support in third_party/boringssl for cef build
+    'name': 'loongarch64_support_boringssl_for_cef',
+    'path': 'third_party/boringssl/src/',
+  },
+  {
+    # Add loongarch64 support in third_party/breakpad for cef build
+    'name': 'loongarch64_support_breakpad_for_cef',
+    'path': 'third_party/breakpad/breakpad/',
+  },
+  {
+    # Add loongarch64 support in third_party/dawn for cef build
+    'name': 'loongarch64_support_dawn_for_cef',
+    'path': 'third_party/dawn/',
+  },
+  {
+    # Add loongarch64 support in third_party/ffmpeg for cef build
+    'name': 'loongarch64_support_ffmpeg_for_cef',
+    'path': 'third_party/ffmpeg/',
+  },
+  {
+    # Add loongarch64 support in third_party/lss for cef build
+    'name': 'loongarch64_support_lss_for_cef',
+    'path': 'third_party/lss/',
+  },
+  {
+    # Add loongarch64 support in third_party/webrtc for cef build
+    'name': 'loongarch64_support_webrtc_for_cef',
+    'path': 'third_party/webrtc/',
   }
 ]
