Add CefPermissionHandler callbacks for permission prompts (see issue #3352)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -254,6 +254,11 @@ patches = [
     'name': 'chrome_browser_net_proxy',
   },
   {
+    # Support override of CreatePermissionPrompt.
+    # https://bitbucket.org/chromiumembedded/cef/issues/3352
+    'name': 'chrome_browser_permission_prompt',
+  },
+  {
     # alloy: Don't initialize ExtensionSystemFactory when extensions are
     # disabled.
     # https://bitbucket.org/chromiumembedded/cef/issues/2852
