--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -39,6 +39,9 @@ patches = [
     #
     # Support custom VS toolchain on Windows.
     # https://bugs.chromium.org/p/chromium/issues/detail?id=623342
+    #
+    # Don't copy dbghelp.dll/dbgcore.dll from the Windows SDK.
+    # https://bitbucket.org/chromiumembedded/cef/issues/3356
     'name': 'runhooks',
   },
   {
