windows: Fix ARM64 v8:run_mksnapshot_default build failure (see https://crbug.com/1344759)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -591,5 +591,11 @@ patches = [
     # Windows: Fix time_win.cc compile error with cef_sandbox.
     # https://chromium-review.googlesource.com/c/chromium/src/+/3718022
     'name': 'base_time_3718022',
+  },
+  {
+    # Windows: Fix ARM64 v8:run_mksnapshot_default fails
+    # https://bugs.chromium.org/p/chromium/issues/detail?id=1344759
+    'name': 'win_v8_mksnapshot_1344759',
+    'path': 'v8',
   }
 ]
