Update to Chromium version 105.0.5176.0 (#1023155)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -284,6 +284,11 @@ patches = [
     'name': 'chrome_browser_profile_menu',
   },
   {
+    # alloy: Don't require heap profiler for utility processes.
+    # Avoids a DCHECK added in https://crrev.com/c21e9f71d1f2e
+    'name': 'chrome_utility_client',
+  },
+  {
     # Support override of the User-Agent product component when NetworkService
     # is enabled.
     # https://bitbucket.org/chromiumembedded/cef/issues/2622
@@ -582,14 +587,14 @@ patches = [
     'name': 'linux_bluetooth_1319006',
   },
   {
-    # Wrap base::Value::{Dict,List}}:WriteIntoTrace() with correct #ifs.
-    # Fixes compile error with official cef_sandbox build on Windows.
-    # https://chromium-review.googlesource.com/c/chromium/src/+/3703780
-    'name': 'base_values_3703780',
+    # Linux: Support chaining of PrintingContextLinux callbacks.
+    # https://bitbucket.org/chromiumembedded/cef/issues/3314
+    'name': 'linux_printing_context',
   },
   {
-    # Windows: Fix time_win.cc compile error with cef_sandbox.
-    # https://chromium-review.googlesource.com/c/chromium/src/+/3718022
-    'name': 'base_time_3718022',
+    # Windows: Add LAZY_INSTANCE_INITIALIZER where necessary to fix official
+    # cef_sandbox build.
+    # https://chromium-review.googlesource.com/c/chromium/src/+/3773637
+    'name': 'base_metrics_3773637',
   }
 ]
