Update to Chromium version 105.0.5195.0 (#1027018)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -589,12 +589,7 @@ patches = [
   {
     # Linux: Support chaining of PrintingContextLinux callbacks.
     # https://bitbucket.org/chromiumembedded/cef/issues/3314
+    # Also reverts the changes from https://crrev.com/db245883e1
     'name': 'linux_printing_context',
-  },
-  {
-    # Windows: Add LAZY_INSTANCE_INITIALIZER where necessary to fix official
-    # cef_sandbox build.
-    # https://chromium-review.googlesource.com/c/chromium/src/+/3773637
-    'name': 'base_metrics_3773637',
   }
 ]
