linux: Fix implicit conversion error on ARM (see https://crbug.com/1292951#c100)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -591,5 +591,11 @@ patches = [
     # https://bitbucket.org/chromiumembedded/cef/issues/3314
     # Also reverts the changes from https://crrev.com/db245883e1
     'name': 'linux_printing_context',
+  },
+  {
+    # Linux: Fix implicit conversion error on ARM.
+    # https://chromium-review.googlesource.com/c/linux-syscall-support/+/3786946/
+    'name': 'linux_arm_1292951',
+    'path': 'third_party/lss',
   }
 ]
