Change the 'libcef_static' target type from static_library to source_set
Using a source_set here keeps the linker on Windows from discarding exported
compilation units that are not directly called from inside libcef_static.

This may also fix linker errors on Linux due to CEF's use of an intermediate
static library (see https://crbug.com/1319006#c2).

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -406,7 +406,7 @@ test("libcef_static_unittests") {
   ]
 }
 
-static_library("libcef_static") {
+source_set("libcef_static") {
   sources = includes_common +
             gypi_paths.autogen_cpp_includes + [
     "libcef/browser/alloy/alloy_browser_context.cc",
