--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -592,5 +592,10 @@ patches = [
     # https://chromium-review.googlesource.com/c/linux-syscall-support/+/3786946/
     'name': 'linux_arm_1292951',
     'path': 'third_party/lss',
+  },
+  {
+    # Fix deadlock in EmbeddedTestServer::ShutdownAndWaitUntilComplete.
+    # https://chromium-review.googlesource.com/c/chromium/src/+/3798752
+    'name': 'net_test_server_3798752'
   }
 ]
