--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -257,6 +257,14 @@ patches = [
     'name': 'chrome_browser_net_proxy',
   },
   {
+    # alloy: Don't create an optimization model downloads directory when
+    # cache_path is empty. This is related to Chrome permissions and the
+    # "PermissionOnDeviceNotificationPredictions" feature which is enabled by
+    # default in https://crbug.com/1350956.
+    # https://bitbucket.org/chromiumembedded/cef/issues/3352
+    'name': 'chrome_browser_optimization_guide',
+  },
+  {
     # Support override of CreatePermissionPrompt.
     # https://bitbucket.org/chromiumembedded/cef/issues/3352
     'name': 'chrome_browser_permission_prompt',
@@ -519,6 +527,9 @@ patches = [
     #
     # Enable the VS 2015 Update 2 fix when building with the MSVC standard
     # library.
+    #
+    # Avoid usage of std::atomic_flag::test() added in C++20.
+    # https://github.com/llvm/llvm-project/issues/57364
     'name': 'base_sandbox_2743',
   },
   {
