Windows: Fix unresolved dependencies error on ARM64

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -600,5 +600,11 @@ patches = [
     # Fix deadlock in EmbeddedTestServer::ShutdownAndWaitUntilComplete.
     # https://chromium-review.googlesource.com/c/chromium/src/+/3798752
     'name': 'net_test_server_3798752'
+  },
+  {
+    # Windows: Fix unresolved dependencies error in
+    # //components/segmentation_platform/embedder on ARM64.
+    # https://bugs.chromium.org/p/chromium/issues/detail?id=1355185
+    'name': 'windows_arm_1355185',
   }
 ]
