--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1582,6 +1582,15 @@ if (is_mac) {
     info_plist_target = ":cef_framework_plist"
   }
 } else {
+  config("pdb_larger_than_4gb") {
+    if (is_win && symbol_level == 2) {
+      # These binaries create PDBs larger than 4 GiB. Increasing the PDB page
+      # size allows larger PDBs, but not all tools can handle such large PDBs
+      # yet.
+      ldflags = [ "/pdbpagesize:8192" ]
+    }
+  }
+
   shared_library("libcef") {
     # Necessary because the libcef_test_support target is testonly.
     testonly = true
@@ -1600,6 +1609,7 @@ if (is_mac) {
 
     configs += [
       ":libcef_autogen_config",
+      ":pdb_larger_than_4gb",
     ]
 
     if (is_win) {
