Support GN configuration of enable_rlz (see issue #3404)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -608,5 +608,10 @@ patches = [
     # chrome/browser/devtools/protocol/page_handler.cc.
     # https://bugs.chromium.org/p/chromium/issues/detail?id=1366011
     'name': 'chrome_browser_devtools_1366011'
+  },
+  {
+    # Support GN configuration of enable_rlz (see issue #3404).
+    # https://chromium-review.googlesource.com/c/chromium/src/+/3934411
+    'name': 'rlz_3934411'
   }
 ]
