Update to Chromium version 108.0.5359.0 (#1058933)

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1377,7 +1377,7 @@ make_pack_header("strings") {
     "$root_gen_dir/chrome/grit/generated_resources.h",
     "$root_gen_dir/chrome/grit/locale_settings.h",
     "$root_gen_dir/chrome/grit/platform_locale_settings.h",
-    "$root_gen_dir/components/omnibox/resources/grit/omnibox_resources.h",
+    "$root_gen_dir/components/omnibox/resources/grit/omnibox_pedal_synonyms.h",
     "$root_gen_dir/components/strings/grit/components_chromium_strings.h",
     "$root_gen_dir/components/strings/grit/components_strings.h",
     "$root_gen_dir/extensions/strings/grit/extensions_strings.h",
@@ -1393,7 +1393,7 @@ make_pack_header("strings") {
     "//chrome/app:generated_resources",
     "//chrome/app/resources:locale_settings",
     "//chrome/app/resources:platform_locale_settings",
-    "//components/omnibox/resources:omnibox_resources",
+    "//components/omnibox/resources:omnibox_pedal_synonyms",
     "//components/strings:components_chromium_strings",
     "//components/strings:components_locale_settings",
     "//components/strings:components_strings",
