Linux: Fix deprecated-volatile error with older glib version
Fix "error: use of result of assignment to object of volatile-
qualified type 'volatile gsize' (aka 'volatile unsigned long') is
deprecated [-Werror,-Wdeprecated-volatile]" when building with
use_sysroot=false on Ubuntu 18.04.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -592,5 +592,13 @@ patches = [
     # Fix deadlock in EmbeddedTestServer::ShutdownAndWaitUntilComplete.
     # https://chromium-review.googlesource.com/c/chromium/src/+/3798752
     'name': 'net_test_server_3798752'
+  },
+  {
+    # Linux: Fix "error: use of result of assignment to object of volatile-
+    # qualified type 'volatile gsize' (aka 'volatile unsigned long') is
+    # deprecated [-Werror,-Wdeprecated-volatile]" when building with
+    # use_sysroot=false on Ubuntu 18.04.
+    # https://chromium-review.googlesource.com/c/chromium/src/+/3960017
+    'name': 'linux_glib_deprecated_volatile'
   }
 ]
