windows: Fix size/placement with multi-DPI screen setup (fixes issue #3359)
Use ScreenWin functions to correctly compute DIP/pixel conversions for
CEF-created top-level windows.

Fix incorrect DIPToScreenRect usage in DesktopWindowTreeHostWin when
|has_external_parent_| is true.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -118,6 +118,10 @@ patches = [
     # Allow override of RWHVBase::GetNewScreenInfosForUpdate() which is now
     # required due to https://crrev.com/96938eb36e in order to use
     # RWHVBase::UpdateScreenInfo() with OSR.
+    #
+    # Windows: Fix incorrect DIPToScreenRect usage in DesktopWindowTreeHostWin
+    # when |has_external_parent_| is true.
+    # https://bitbucket.org/chromiumembedded/cef/issues/3359
     'name': 'views_widget',
   },
   {
