--- a/BUILD.gn
+++ b/BUILD.gn
@@ -611,6 +611,8 @@ source_set("libcef_static") {
     "libcef/browser/frame_host_impl.cc",
     "libcef/browser/frame_host_impl.h",
     "libcef/browser/frame_service_base.h",
+    "libcef/browser/global_preference_manager_impl.cc",
+    "libcef/browser/global_preference_manager_impl.h",
     "libcef/browser/image_impl.cc",
     "libcef/browser/image_impl.h",
     "libcef/browser/iothread_state.cc",
@@ -709,6 +711,10 @@ source_set("libcef_static") {
     "libcef/browser/permission_prompt.h",
     "libcef/browser/prefs/browser_prefs.cc",
     "libcef/browser/prefs/browser_prefs.h",
+    "libcef/browser/prefs/pref_helper.cc",
+    "libcef/browser/prefs/pref_helper.h",
+    "libcef/browser/prefs/pref_registrar.cc",
+    "libcef/browser/prefs/pref_registrar.h",
     "libcef/browser/prefs/pref_store.cc",
     "libcef/browser/prefs/pref_store.h",
     "libcef/browser/prefs/renderer_prefs.cc",
