win: Fix 1px gap with maximized frameless windows on Win11 (fixes issue #3414)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -122,6 +122,9 @@ patches = [
     # Windows: Fix incorrect DIPToScreenRect usage in DesktopWindowTreeHostWin
     # when |has_external_parent_| is true.
     # https://bitbucket.org/chromiumembedded/cef/issues/3359
+    #
+    # Windows: Fix 1px gap with maximized frameless windows on Win11.
+    # https://bitbucket.org/chromiumembedded/cef/issues/3414
     'name': 'views_widget',
   },
   {
