--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -118,6 +118,9 @@ patches = [
     # Allow override of RWHVBase::GetNewScreenInfosForUpdate() which is now
     # required due to https://crrev.com/96938eb36e in order to use
     # RWHVBase::UpdateScreenInfo() with OSR.
+    #
+    # Windows: Fix 1px gap with maximized frameless windows on Win11.
+    # https://bitbucket.org/chromiumembedded/cef/issues/3414
     'name': 'views_widget',
   },
   {
