Update to Chromium version 109.0.5414.0 (#1070088)
- mac: Xcode 14.0 with macOS SDK 13.0 is now required.
- Remove CefRequestHandler::OnQuotaRequest because persistent quota is no
  longer supported (see https://crbug.com/1208141)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -527,6 +527,8 @@ patches = [
     #
     # Avoid usage of std::atomic_flag::test() added in C++20.
     # https://github.com/llvm/llvm-project/issues/57364
+    #
+    # Avoid usage of PartitionAlloc assertions (PA_BASE_CHECK) in raw_ptr.h.
     'name': 'base_sandbox_2743',
   },
   {
