--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1662,7 +1662,7 @@ if (is_mac) {
       ]
     }
 
-    if (is_linux && !is_debug && use_allocator=="none") {
+    if (is_linux && !is_debug && !use_partition_alloc_as_malloc) {
       # Only export necessary symbols from libcef.so.
       # Don't do this in Debug builds because it causes the resulting
       # application to crash.
@@ -2196,13 +2196,7 @@ if (is_mac) {
         ]
       }
 
-      if (is_component_build) {
-        if (use_allocator=="tcmalloc") {
-          # Link to base to initialize tcmalloc allocator shims, otherwise
-          # base::allocator::IsAllocatorInitialized check fails
-          deps += [ "//base" ]
-        }
-      } else {
+      if (!is_component_build) {
         # Set rpath to find our own libfreetype even in a non-component build.
         configs += [ "//build/config/gcc:rpath_for_built_shared_libraries" ]
       }
