--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -609,5 +609,15 @@ patches = [
     # use_sysroot=false on Ubuntu 18.04.
     # https://chromium-review.googlesource.com/c/chromium/src/+/3960017
     'name': 'linux_glib_deprecated_volatile'
+  },
+  {
+    # Windows: Add ENABLE_BASE_TRACING check to fix cef_sandbox build.
+    # https://chromium-review.googlesource.com/c/chromium/src/+/4016554
+    'name': 'base_process_4016554'
+  },
+  {
+    # Windows: Add ENABLE_BASE_TRACING check to fix cef_sandbox build.
+    # https://chromium-review.googlesource.com/c/chromium/src/+/4015625
+    'name': 'base_task_4015625'
   }
 ]
