mac: Fix harfbuzz sprintf compile error with macOS 14 SDK.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -607,5 +607,11 @@ patches = [
     # use_sysroot=false on Ubuntu 18.04.
     # https://chromium-review.googlesource.com/c/chromium/src/+/3960017
     'name': 'linux_glib_deprecated_volatile'
+  },
+  {
+    # mac: Fix sprintf compile error with macOS 14 SDK.
+    # https://github.com/harfbuzz/harfbuzz/pull/3495#issuecomment-1299107964
+    'name': 'mac_harfbuzz_3495',
+    'path': 'third_party/harfbuzz-ng/src'
   }
 ]
