--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -619,5 +619,10 @@ patches = [
     # Windows: Add ENABLE_BASE_TRACING check to fix cef_sandbox build.
     # https://chromium-review.googlesource.com/c/chromium/src/+/4015625
     'name': 'base_task_4015625'
+  },
+  {
+    # Windows: Fix ARM64 build generation.
+    # https://bugs.chromium.org/p/chromium/issues/detail?id=1385454
+    'name': 'win_machine_learning_1385454'
   }
 ]
